--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 		
 	</head>
 	<body>
-		<p>Welcome to my e-portfolio!</p>
-		
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Welcome to my e-portfolio!</p>
 	</body>
 </html>
