--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+		<title>E-Portfolio</title>
 	</head>
 	<body>
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Welcome to my e-portfolio!</p>
