--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<title>E-Portfolio</title>
 	</head>
+	<script>
+		function rick_rolled() {
+			document.getElementById("troll").innnerHTML="INTERESTING";
+		}
+	</script>
 	<body>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Welcome to my e-portfolio!</p>
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" id="troll">Welcome to my e-portfolio!</a>
 	</body>
 </html>
